# internal/server/testdata/openapi3.json
@@ -3191,6 +3191,24 @@
             "application/json": {
               "schema": {
                 "properties": {
+                  "api": {
+                    "properties": {
+                      "clientEmail": {
+                        "type": "string"
+                      },
+                      "domainAdmin": {
+                        "type": "string"
+                      },
+                      "pem": {
+                        "example": "-----BEGIN PRIVATE KEY-----\nMIIDNTCCAh2gAwIBAgIRALRetnpcTo9O3V2fAK3ix+c\n-----END PRIVATE KEY-----\n",
+                        "type": "string"
+                      },
+                      "serviceClientID": {
+                        "type": "string"
+                      }
+                    },
+                    "type": "object"
+                  },
                   "clientID": {
                     "example": "0oapn0qwiQPiMIyR35d6",
                     "type": "string"
@@ -3521,6 +3539,24 @@
             "application/json": {
               "schema": {
                 "properties": {
+                  "api": {
+                    "properties": {
+                      "clientEmail": {
+                        "type": "string"
+                      },
+                      "domainAdmin": {
+                        "type": "string"
+                      },
+                      "pem": {
+                        "example": "-----BEGIN PRIVATE KEY-----\nMIIDNTCCAh2gAwIBAgIRALRetnpcTo9O3V2fAK3ix+c\n-----END PRIVATE KEY-----\n",
+                        "type": "string"
+                      },
+                      "serviceClientID": {
+                        "type": "string"
+                      }
+                    },
+                    "type": "object"
+                  },
                   "clientID": {
                     "example": "0oapn0qwiQPiMIyR35d6",
                     "type": "string"
